--- a/package.json
+++ b/package.json
@@ -6,18 +6,26 @@
   "author": "Francesco Sullo <francesco@sullo.co>",
   "homepage": "https://0xauth.com",
   "scripts": {
+    "lint": "eslint ./server/**",
     "test": "npx mocha 'test/server/**/*-spec.js'"
   },
   "dependencies": {
     "ethers": "^4.0.27",
-    "tronweb": "^2.5.0"
+    "tronweb": "^2.5.0",
+    "web3": "^1.0.0-beta.54"
   },
   "devDependencies": {
     "lodash": "^4.17.11",
-    "mocha": "^5.1.1"
+    "mocha": "^5.1.1",
+    "eslint": "^5.15.1",
+    "eslint-plugin-node": "^8.0.1"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/0xAuth/0xauth-js"
+  },
+  "engines": {
+    "node": ">=8.10.0"
   }
 }
+
