--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "ethers": "^4.0.27",
+    "husky": "^2.2.0",
     "tronweb": "^2.5.0",
     "web3": "^1.0.0-beta.54"
   },
@@ -26,6 +27,10 @@
   },
   "engines": {
     "node": ">=8.10.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "node ./scripts/pre-push.js"
+    }
   }
 }
-
