--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "homepage": "https://0xauth.com",
   "scripts": {
     "lint": "eslint ./server/**",
-    "test": "npx mocha 'test/server/**/*-spec.js'"
+    "test": "nyc --reporter=html --reporter=text mocha 'test/server/**/*-spec.js'"
   },
   "dependencies": {
     "ethers": "^4.0.27",
@@ -16,10 +16,11 @@
     "web3": "^1.0.0-beta.54"
   },
   "devDependencies": {
+    "eslint": "^5.15.1",
+    "eslint-plugin-node": "^8.0.1",
     "lodash": "^4.17.11",
     "mocha": "^5.1.1",
-    "eslint": "^5.15.1",
-    "eslint-plugin-node": "^8.0.1"
+    "nyc": "^14.1.0"
   },
   "repository": {
     "type": "git",
