--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "node ./scripts/pre-push.js"
+      "pre-push": "node ./scripts/pre-commit.js"
     }
   }
 }
