--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "node ./scripts/pre-commit.js"
+      "pre-commit": "node ./scripts/pre-commit.js"
     }
   }
 }
